crates/ox-format/src/snapshots/ox_format__parse__tests__parse_simple_fixture.snap
---
source: crates/ox-format/src/parse.rs
assertion_line: 1812
expression: wf
---
Workflow {
    warnings: [
        "tests/fixtures/simple/Oxymakefile.toml: legacy schema 1: ox_version Some(\"0.1\") is informational; no binary requirement is enforced for this file. Resource identity is unchanged. Use ox migrate --to-format 2 to review an upgrade.",
    ],
    ox_version: Some(
        "0.1",
    ),
    format_version: "1",
    config: {
        "samples": List(
            [
                "A",
                "B",
                "C",
            ],
        ),
    },
    rules: [
        Rule {
            name: RuleName(
                "all",
            ),
            priority: None,
            inputs: [
                InputPattern {
                    pattern: TargetPattern(
                        "results/{sample}.txt",
                    ),
                    name: None,
                    format: None,
                },
            ],
            outputs: [],
            execution: Shell {
                command: "",
            },
            resources: {},
            env: {},
            environment: None,
            tags: {},
            meta: RuleMeta {
                description: None,
            },
            wildcard_constraints: {},
            when: None,
            expand_mode: Product,
            error_strategy: Terminate,
            timeout: None,
            executor: None,
            log: LogConfig {
                stdout: None,
                stderr: None,
            },
            benchmark: None,
            retries: None,
            params: {},
            param_files: [],
            shell_executable: None,
            clean_outputs: Always,
            platform_scope: Exact,
            reproducibility: Deterministic,
            source_line: None,
        },
        Rule {
            name: RuleName(
                "process",
            ),
            priority: None,
            inputs: [
                InputPattern {
                    pattern: TargetPattern(
                        "data/{sample}.csv",
                    ),
                    name: None,
                    format: None,
                },
            ],
            outputs: [
                OutputPattern {
                    pattern: TargetPattern(
                        "results/{sample}.txt",
                    ),
                    name: None,
                    format: None,
                    lifecycle: Permanent,
                    materialize: Always,
                },
            ],
            execution: Shell {
                command: "cat {input} | sort > {output}",
            },
            resources: {},
            env: {},
            environment: None,
            tags: {},
            meta: RuleMeta {
                description: None,
            },
            wildcard_constraints: {},
            when: None,
            expand_mode: Product,
            error_strategy: Terminate,
            timeout: None,
            executor: None,
            log: LogConfig {
                stdout: None,
                stderr: None,
            },
            benchmark: None,
            retries: None,
            params: {},
            param_files: [],
            shell_executable: None,
            clean_outputs: Always,
            platform_scope: Exact,
            reproducibility: Deterministic,
            source_line: None,
        },
    ],
    gates: [],
    includes: [],
    global_environment: None,
    global_env: {},
    profiles: {},
    executor_config: ExecutorConfig {
        slurm: None,
    },
    resource_classes: {},
    resource_class_origins: {},
    rule_resource_classes: {},
}
